Fixed [DataBase] Feito conexão com banco de dados online, ajuste de pemissão de acesso para o front-end e ajustes de classes

--- a/LarTechPersons/appsettings.json
+++ b/LarTechPersons/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=db4free.net;Database=lartechdb;Uid=laradmin;Pwd=lartech123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
